<resources>
    <string name="app_name">Implicit Intent</string>
    <string name="android_uri">http://developer.android.com</string>
    <string name="button">button</string>
    <string name="cikande">Cikande</string>
    <string name="open_website">Open Website</string>
    <string name="open_location">Open Location</string>
    <string name="share_this">Share This</string>
    <string name="share">SHARE</string>
</resources>